WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217012
[SOUP] WebSocket: cookies set in request don't appear in the inspector
https://bugs.webkit.org/show_bug.cgi?id=217012
Summary
[SOUP] WebSocket: cookies set in request don't appear in the inspector
Carlos Garcia Campos
Reported
2020-09-26 07:32:44 PDT
Cookies are set by libsoup and we are notifying about the handshake being sent before the cookie header is added to the request.
Attachments
Patch
(1.78 KB, patch)
2020-09-26 07:35 PDT
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2020-09-26 07:35:20 PDT
Created
attachment 409776
[details]
Patch
Michael Catanzaro
Comment 2
2020-09-26 08:58:20 PDT
Comment on
attachment 409776
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=409776&action=review
> Source/WebKit/NetworkProcess/soup/WebSocketTaskSoup.cpp:83 > + g_signal_connect(msg, "starting", G_CALLBACK(+[](SoupMessage* msg, WebSocketTask* task) {
+[] to convert to vanilla function pointer so we can use it in a signal callback is amazing... I didn't know this was possible!
Carlos Garcia Campos
Comment 3
2020-09-27 05:46:06 PDT
Committed
r267655
: <
https://trac.webkit.org/changeset/267655
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug