[SOUP] WebSocket: cookies set in request don't appear in the inspector https://bugs.webkit.org/show_bug.cgi?id=217012

Reviewed by Michael Catanzaro.

Cookies are set by libsoup and we are notifying about the handshake being sent before the cookie header is added
to the request.

* NetworkProcess/soup/WebSocketTaskSoup.cpp:
(WebKit::WebSocketTask::WebSocketTask): Connect to SoupMessage::starting to notify the web process the handshake
request has been sent.

Canonical link: https://commits.webkit.org/229814@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267655 268f45cc-cd09-0410-ab3c-d52691b4dbfc